force-app/src/objects/OrderApi__Credit_Memo__c.object
<CustomObject>
    <description>Credit Memos track revenue received as additional payment.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s account record. Auto-populates with the related contact&apos;s parent account if not defined prior to entry.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount__c</fullName>
        <description>**System Calculated/Override** Total over payments received.</description>
        <inlineHelpText>**System Calculated/Override** Total over payments received.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Applied_Amount__c</fullName>
        <description>** System Calculated ** The total amount of credit memo lines that have been posted related to this Credit Memo.</description>
        <inlineHelpText>** System Calculated ** The total amount of credit memo lines that have been posted related to this Credit Memo.</inlineHelpText>
        <label>Applied Amount</label>
        <summarizedField>OrderApi__Credit_Memo_Line__c.OrderApi__Amount__c</summarizedField>
        <summaryForeignKey>OrderApi__Credit_Memo_Line__c.OrderApi__Credit_Memo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the business group record - business groups will auto-populate if not defined on entry.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</description>
        <inlineHelpText>**System Calculated/Override** Link to the customer&apos;s contact record. Auto-populates with the related account&apos;s primary contact if not defined prior to entry.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The account to use for crediting additional revenue received. Default value is the linked Business Group&apos;s Credit Memo account.</description>
        <inlineHelpText>**System Calculated/Override** The account to use for crediting additional revenue received. Default value is the linked Business Group&apos;s Credit Memo account.</inlineHelpText>
        <label>Credit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Credit Memo&apos;s</relationshipLabel>
        <relationshipName>Credit_Memo_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>** System Calculated ** Link to the customer record.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;), HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name, &quot;&quot;),
            HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName, &quot;&quot;))</formula>
        <inlineHelpText>**System Calculated** A link to the record the system considers the &quot;Customer&quot;  as determined by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Debit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The GL account to use when posting to debit. Default value is the linked Business Group&apos;s writeoff account.</description>
        <inlineHelpText>**System Calculated/Override** The GL account to use when posting to debit. Default value is the linked Business Group&apos;s writeOff account.</inlineHelpText>
        <label>Debit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Debit Credit Memos</relationshipLabel>
        <relationshipName>Debit_Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required** Select &quot;Account&quot; if the Credit Memo should be added to the related account, select &quot;Contact&quot; if the Credit Memo should be added to the related &quot;Contact&quot;.</description>
        <inlineHelpText>**Required** Select &quot;Account&quot; if the Credit Memo should be added to the related account, select &quot;Contact&quot; if the Credit Memo should be added to the related &quot;Contact&quot;.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice where the OverPayment is made.</description>
        <inlineHelpText>Invoice where the OverPayment is made.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Drafted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the credit memo is in a draft status.</description>
        <inlineHelpText>When checked, the credit memo is in a draft status.</inlineHelpText>
        <label>Is Drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the credit memo creates transactions.</description>
        <inlineHelpText>When checked, the credit memo creates transactions.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>** System Calculated/Override ** The date the Credit Memo was posted.</description>
        <inlineHelpText>** System Calculated/Override ** The date the Credit Memo was posted.</inlineHelpText>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Remaining_Amount__c</fullName>
        <description>**System Calculated** Total - Applied</description>
        <formula>OrderApi__Amount__c - OrderApi__Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Total - Applied</inlineHelpText>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Order where the OverPayment is made.</description>
        <inlineHelpText>Sales Order where the OverPayment is made.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Credit Memos</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>**System Calculated/Override** Primary indicator of the credit memo&apos;s current status. Default value is &quot;Draft&quot;.</description>
        <inlineHelpText>**System Calculated/Override** Primary indicator of the credit memo&apos;s current status. Default value is &quot;Draft&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Memo</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Contact__c</columns>
        <columns>OrderApi__Account__c</columns>
        <columns>OrderApi__Remaining_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>